--- a/css/lab6_final.css
+++ b/css/lab6_final.css
@@ -1,10 +1,14 @@
 body {
   background-color: coral;
 }
-#page-wrapper {
-  width: 960px;
-  margin: 0 auto;
-  box-shadow: 0px 4px 8px 2px rgba(0, 0, 0, 1); 
-  border-radius: 12px 12px 0px 0px; 
-}
 
+mainbodybox
+{
+margin:auto;
+margin-top:150px;
+width:1500px;
+max-width:100%;  <-- add this
+overflow-x: scroll;  <-- add this
+height:500px;
+background-color:#fff;
+}
