--- a/css/lab6_final.css
+++ b/css/lab6_final.css
@@ -1,2 +1,8 @@
-body { background: url(image/black.jpg) repeat 0 0; }
-
+body {
+  background-color: black;
+}
+.myDiv {
+  border: 5px outset black;
+  background-color: white;    
+  text-align: center;
+}
