--- a/css/page 2.css
+++ b/css/page 2.css
@@ -1,16 +1,3 @@
-
-
-h1 {
-  color: blue;
-  font-family: verdana;
-  font-size: 300%;
-
-}
-p  {
-  color: white;
-  font-family: courier;
-  font-size: 160%;
-}
-p {
-  border: 2px solid red;
+body {
+  background-color: red;
 }
