--- a/css/page 2.css
+++ b/css/page 2.css
@@ -1,3 +1,18 @@
 body {
   background-color: red;
 }
+
+h1 {
+  color: blue;
+  font-family: verdana;
+  font-size: 300%;
+
+}
+p  {
+  color: white;
+  font-family: courier;
+  font-size: 160%;
+}
+p {
+  border: 2px solid red;
+}
