--- a/css/page 2.css
+++ b/css/page 2.css
@@ -7,3 +7,12 @@ h1 {
   font-family: verdana;
   font-size: 300%;
 }
+p  {
+  color: white;
+  font-family: courier;
+  font-size: 160%;
+}
+
+p {
+  border: 2px solid red;
+}
