--- a/css/page 3.css
+++ b/css/page 3.css
@@ -4,3 +4,13 @@
   background-color: blue;    
   text-align: center;
 }
+.myDiv2 {
+  border: 5px outset red;
+  background-color: yellow;    
+  text-align: center;
+}
+.myDiv3 {
+  border: 5px outset blue;
+  background-color: orange;    
+  text-align: center;
+}
