--- a/css/lab6_final.css
+++ b/css/lab6_final.css
@@ -1,8 +1,85 @@
-body {
-  background-color: coral;
+body  {
+  background-color: grey;
+
 }
 .myDiv {
   border: 5px outset black;
   background-color: white;    
   text-align: center;
+}
+ul {
+  list-style-type: none;
+}
+h1 {
+  color: black;
+  font-family: verdana;
+  font-size: 300%;
+
+}
+
+#main-navbar {
+  background-color: black;
+  overflow: hidden;
+}
+
+#navbar-container {
+  float: left;
+  width: 100%;
+  position: relative;
+}
+
+#main-navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  left: 50%;
+  float: left;
+}
+
+#main-navbar ul li {
+  float: left;
+  position: relative;
+  right: 50%;
+  display: block;
+}
+
+#main-navbar ul li a {
+  display: block;
+  padding: 10px 20px;
+  color: #fff;
+  text-decoration: none;
+}
+
+#main-navbar ul li a:hover {
+  background-color: black;
+}
+
+#onpage {
+  text-decoration: underline overline;
+}
+
+#sidebar {
+  position: fixed;
+  right:0%;
+  background-color: yellow;
+  height: 100%;
+  width: 20%;
+}
+
+#sidebar ul {
+  list-style-type: none;
+  text-align: center;
+  padding: 0;
+}
+
+#sidebar ul li a {
+  display: block;
+  padding: 15px 0;
+  color: #FF4500;
+  text-decoration: none;
+}
+
+#sidebar ul li a:hover {
+  background-color: #000;
 }
