--- a/css/lab6_final.css
+++ b/css/lab6_final.css
@@ -2,11 +2,7 @@ body  {
   background-color: grey;
 
 }
-.myDiv {
-  border: 5px outset black;
-  background-color: white;    
-  text-align: center;
-}
+
 ul {
   list-style-type: none;
 }
@@ -16,6 +12,17 @@ h1 {
   font-size: 300%;
 
 }
+img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+img[src="image/corn.png"] {
+  border: none;
+  background: transparent;
+  box-shadow: none;
+}
+
 
 #main-navbar {
   background-color: black;
