--- a/css/lab6_final.css
+++ b/css/lab6_final.css
@@ -34,6 +34,12 @@ p  {
   font-family: courier;
   font-size: 160%;
 }
+p  {
+text-align: center;
+}
+a {
+   text-decoration: none;
+}
 
 #para1 {
   text-align: center;
@@ -50,10 +56,37 @@ p  {
   color: black;
 
 }
+
+.p3 {
+  font-family: Arial, sans-serif;
+}
+.title{
+	font-family: myFirstFont;
+   src: url(sansation_light.woff);
+}
 a:hover {
   background-color: yellow;
 }
+.butterfly-kids-regular {
+  font-family: "Butterfly Kids", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
 
+#rcorners2 {
+  border-radius: 25px;
+  border: 2px solid #73AD21;
+  padding: 20px; 
+  width: 200px;
+  height: 150px;
+  background: white;  
+  color:black;
+  font-family: Georgia, "Times New Roman", serif;
+}
+
+#main-navbar  a:hover {
+  background-color: white;
+}
 
 #para2 {
   color: black;
