--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,16 @@ img {
   color:black;
   font-family: Georgia, "Times New Roman", serif;
 }
+#rcorners3 {
+  border-radius: 25px;
+  border: 2px solid #73AD21;
+  padding: 20px; 
+  width: 200px;
+  height: 150px;
+  background: white;  
+  color:black;
+  font-family: Georgia, "Times New Roman", serif;
+}
 
 #main-navbar  a:hover {
   background-color: white;
