--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,11 @@ a {
 }
 .right {
   float: right;
-  background: cyan;
+
+}
+.left {
+  float: left;
+ 
 }
  .GFG img {
   width: 200px;
@@ -66,7 +70,7 @@ a {
 }
 .title{
 	font-family: myFirstFont;
-   src: url(sansation_light.woff);
+
 }
 a:hover {
   background-color: yellow;
